[package]
description = "PostgreSQL-compatibly idiosyncratic connection string parsing. Forked from pg-connection-string"
edition = "2021"
license = "AGPL-3.0-or-later"
name = "postgres-conn-str"
repository = "https://github.com/miralandlabs/postgres-conn-str"
version = "0.1.0"

[dependencies]
anyhow = { default-features = false, features = ["std"], version = "1.0.71" }
clap = { version = "4.3.5", default-features = false, features = [
  "derive",
  "color",
  "std",
], optional = true }
serde_yaml = { version = "^0.9", default-features = false, optional = true }

[dependencies.jacklog]
default-features = false
version = "0.2.0"
optional = true

[dependencies.nom]
default-features = false
features = ["alloc"]
version = "7.1.3"

[dependencies.rand]
default-features = false
features = ["std_rng", "std"]
version = "0.8.5"
optional = true

[dependencies.serde]
default-features = false
features = ["derive"]
version = "^1"
optional = true

[dependencies.tracing]
default-features = false
version = "0.1.37"

[features]
cli = ["dep:clap", "dep:jacklog", "anyhow/backtrace", "dep:rand"]
serde = ["dep:serde", "dep:serde_yaml"]
default = []

[[bin]]
name = "pcs"
required-features = ["cli"]
